# dymbox_atmega8

./: .gitignore  CMakeLists.txt  main.c
cmake/: avr-gcc.cmake
